# trash-man

./: Cargo.toml
